k8smanifest/fronend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: prescripto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: pavanvarikolu/prescriptofrontendapp:1.0
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: prescripto
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: frontend
  type: LoadBalancer
