k8smanifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prescripto-ingress
  namespace: prescripto
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: pavavarikolu.online
    http:
      paths:
      - path: /backend(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 4000
      - path: /frontend(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
      - path: /mongodb(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: mongodb
            port:
              number: 27017
